[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/sky.png" type="Texture" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="AnimatedTexture" id=3]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )
sky_speed = 15.0

[node name="Skies" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="Sky" type="Sprite" parent="Skies"]
position = Vector2( 256, 716.5 )
scale = Vector2( 0.520444, 0.520444 )
texture = ExtResource( 1 )

[node name="1st_notifier" type="VisibilityNotifier2D" parent="Skies/Sky"]
position = Vector2( 6.86777, -1110.39 )
scale = Vector2( -150.954, -1.19874 )

[node name="Sky2" type="Sprite" parent="Skies"]
position = Vector2( 256, -454.5 )
scale = Vector2( 0.520444, 0.520444 )
texture = ExtResource( 1 )

[node name="2nd_notifier" type="VisibilityNotifier2D" parent="Skies/Sky2"]
position = Vector2( 6.86777, -1092.16 )
scale = Vector2( -150.954, -3.02155 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
margin_top = 80.0
margin_right = 480.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JUMPER"
align = 1
valign = 1

[node name="Title2" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 696.0
margin_right = 472.0
margin_bottom = 716.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Made By Mang0"

[node name="Play" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -72.0
margin_right = 128.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 2 )
text = "Play"
icon = SubResource( 3 )

[node name="Quit" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
icon = SubResource( 3 )

[connection signal="screen_exited" from="Skies/Sky/1st_notifier" to="." method="_on_1st_notifier_screen_exited"]
[connection signal="screen_exited" from="Skies/Sky2/2nd_notifier" to="." method="_on_2nd_notifier_screen_exited"]
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_Quit_pressed"]
